# SEAL

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGES.md  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  Changes.md  Contrib.md  Dockerfile  ISSUES.md  Issues.md  NOTICE  README.md  SEAL.sln  SEALNET.sln  SECURITY.md  Security.md  azure-pipelines.yml  seal.pc.in
dotnet/native/: CMakeLists.txt  SEALNetNative.vcxproj  SEALNetNative.vcxproj.filters
dotnet/native/seal/: contextdata_wrapper.h  defines.h  dllmain.cpp  keygenerator_wrapper.h  memorymanager_wrapper.h  plaintext_wrapper.cpp  secretkey_wrapper.cpp
dotnet/native/sealnet/: CMakeLists.txt  batchencoder_wrapper.cpp  batchencoder_wrapper.h  biguint_wrapper.cpp  biguint_wrapper.h  ciphertext_wrapper.cpp  ciphertext_wrapper.h  ckksencoder_wrapper.cpp  ckksencoder_wrapper.h  coeffmodulus_wrapper.cpp  coeffmodulus_wrapper.h  contextdata_wrapper.cpp  contextdata_wrapper.h  decryptor_wrapper.cpp  decryptor_wrapper.h  defaultparams_wrapper.cpp  defaultparams_wrapper.h  defines.h  dllmain.cpp  encoder_wrapper.cpp  encoder_wrapper.h  encryptionparameterqualifiers_wrapper.cpp  encryptionparameterqualifiers_wrapper.h  encryptionparameters_wrapper.cpp  encryptionparameters_wrapper.h  encryptor_wrapper.cpp  encryptor_wrapper.h  evaluator_wrapper.cpp  evaluator_wrapper.h  galoiskeys_wrapper.cpp  galoiskeys_wrapper.h  intencoder_wrapper.cpp  intencoder_wrapper.h  keygenerator_wrapper.cpp  keygenerator_wrapper.h  kswitchkeys_wrapper.cpp  kswitchkeys_wrapper.h  memorymanager_wrapper.cpp  memorymanager_wrapper.h  memorypoolhandle_wrapper.cpp  (+24 more)
native/bench/: CMakeLists.txt  bench.cpp  bench.h  bfv.cpp  bgv.cpp  ckks.cpp  keygen.cpp  ntt.cpp  util.cpp
native/examples/: 1_basic_bfv.cpp  1_bfv_basics.cpp  2_basic_encoders.cpp  2_encoders.cpp  3_basic_ckks.cpp  3_levels.cpp  4_basic_ckks.cpp  4_bgv_basics.cpp  4_ckks_basics.cpp  4_rotation.cpp  5_ckks_basics.cpp  5_levels.cpp  5_rotation.cpp  6_performance.cpp  6_rotation.cpp  6_serialization.cpp  7_performance.cpp  7_serialization.cpp  8_performance.cpp  CMakeLists.txt  SEALExamples.vcxproj  SEALExamples.vcxproj.filters  examples.cpp  examples.h  examples_old.cpp
native/src/: CMakeConfig.cmd  CMakeLists.txt  SEAL.vcxproj  SEAL.vcxproj.filters  SEAL_C.vcxproj  SEAL_C.vcxproj.filters
native/src/cmake/: FindMSGSL.cmake  Findmsgsl.cmake  SEALConfig.cmake  SEALConfig.cmake.in  SEALConfigVersion.cmake  SEALTargets.cmake
native/src/seal/: CMakeLists.txt  base64.cpp  base64.h  batchencoder.cpp  batchencoder.h  biguint.cpp  biguint.h  bindings.cpp  ciphertext.cpp  ciphertext.h  ckks.cpp  ckks.h  coeffmod.cpp  coeffmod.h  coeffmodulus.cpp  coeffmodulus.h  context.cpp  context.h  decryptor.cpp  decryptor.h  defaultparams.h  dynarray.h  encryptionparams.cpp  encryptionparams.h  encryptor.cpp  encryptor.h  evaluator.cpp  evaluator.h  galoiskeys.cpp  galoiskeys.h  intarray.h  intencoder.cpp  intencoder.h  keygenerator.cpp  keygenerator.h  kswitchkeys.cpp  kswitchkeys.h  memorymanager.cpp  memorymanager.h  modulus.cpp  (+19 more)
native/src/seal/c/: CMakeLists.txt  batchencoder.cpp  batchencoder.h  biguint.cpp  biguint.h  ciphertext.cpp  ciphertext.h  ckksencoder.cpp  ckksencoder.h  contextdata.cpp  contextdata.h  decryptor.cpp  decryptor.h  defines.h  dllmain.cpp  encryptionparameterqualifiers.cpp  encryptionparameterqualifiers.h  encryptionparameters.cpp  encryptionparameters.h  encryptor.cpp  encryptor.h  evaluator.cpp  evaluator.h  galoiskeys.cpp  galoiskeys.h  intencoder.cpp  intencoder.h  keygenerator.cpp  keygenerator.h  kswitchkeys.cpp  kswitchkeys.h  memorymanager.cpp  memorymanager.h  memorypoolhandle.cpp  memorypoolhandle.h  modulus.cpp  modulus.h  plaintext.cpp  plaintext.h  publickey.cpp  (+19 more)
native/src/seal/util/: CMakeLists.txt  aes.cpp  aes.h  baseconverter.cpp  baseconverter.h  blake2-impl.h  blake2.h  blake2xb-ref.c  blake2xb.c  cgmanifest.json  clang.h  clipnormal.cpp  clipnormal.h  common.cpp  common.h  config.h.in  croots.cpp  gcc.h  (+56 more)
native/tests/: CMakeLists.txt  SEALTest.vcxproj  SEALTest.vcxproj.filters  packages.config
native/tests/seal/: CMakeLists.txt  baseconverter.cpp  baseconverter.cpp.bak  batchencoder.cpp  biguint.cpp  ciphertext.cpp  ckks.cpp  coeffmod.cpp  context.cpp  decryptor.cpp  dynarray.cpp  encryptionparams.cpp  encryptor.cpp  evaluator.cpp  galoiskeys.cpp  intarray.cpp  intencoder.cpp  keygenerator.cpp  memorymanager.cpp  modulus.cpp  plaintext.cpp  publickey.cpp  randomgen.cpp  randomtostd.cpp  relinkeys.cpp  secretkey.cpp  serialization.cpp  smallmodulus.cpp  testrunner.cpp
net/dll/: CMakeLists.txt  SEALdll.vcxproj  SEALdll.vcxproj.filters
net/dll/seal/: CMakeLists.txt  batchencoder.cpp  batchencoder.h  batchencoder_wrapper.cpp  batchencoder_wrapper.h  biguint.cpp  biguint.h  biguint_wrapper.cpp  biguint_wrapper.h  ciphertext.cpp  ciphertext.h  ciphertext_wrapper.cpp  ciphertext_wrapper.h  ckksencoder.cpp  ckksencoder.h  ckksencoder_wrapper.cpp  ckksencoder_wrapper.h  contextdata.cpp  contextdata.h  contextdata_wrapper.cpp  contextdata_wrapper.h  decryptor.cpp  decryptor.h  decryptor_wrapper.cpp  decryptor_wrapper.h  defaultparams.cpp  defaultparams.h  defaultparams_wrapper.cpp  defines.h  dllmain.cpp  encoder_wrapper.cpp  encoder_wrapper.h  encryptionparameterqualifiers.cpp  encryptionparameterqualifiers.h  encryptionparameterqualifiers_wrapper.cpp  encryptionparameterqualifiers_wrapper.h  encryptionparameters.cpp  encryptionparameters.h  encryptionparameters_wrapper.cpp  encryptionparameters_wrapper.h  (+53 more)
tests/: CMakeLists.txt  SEALTest.vcxproj  SEALTest.vcxproj.filters
tests/seal/: CMakeLists.txt  batchencoder.cpp  ckks.cpp  context.cpp  encoder.cpp  encryptionparams.cpp  encryptor.cpp  evaluator.cpp  intencoder.cpp  keygenerator.cpp  memorymanager.cpp  plaintext.cpp  publickey.cpp  smallmodulus.cpp  testrunner.cpp
tests/seal/util/: jsonparser.cpp  locks.cpp  numth.cpp  polyarith.cpp  polyarithmod.cpp  polycore.cpp  smallntt.cpp  stringtouint64.cpp  uint64tostring.cpp  uintarith.cpp  uintarithsmallmod.cpp  uintcore.cpp
(+366 files in other folders)
